--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 		<header id="header">
 			<!-- resume header with your name and title -->
 			<h1>Shuhang Tan</h1>
+            <h3>University of Science and Technology of China</h3>
 			<hr>
-			USTC Graduate Student
+			Major: Computer Technology / Tel: +86 15375288176  /  Wechat: 15995099673
 			<hr>
 		</header>
 		<main>
@@ -35,19 +36,42 @@
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-                    <p>HTML, CSS, GitHub, VS Code...</p>
+                    <p>Computer Languages: C++, Python</p>
+                    <p>Technologies: Ubuntu, ROS, Pytorch, git, docker</p>
 				</section>
 
 				<section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
-                    <h3>YOUR MAJOR</h3>
+                    <h3><b>University of Science and Technology of China(USTC)</b></b></h3>
                         <p>
-                            Your university or school
+                            Master of Computer technology 
                         </p>
                         <p>
-                            2018-2022
+                            2020.9 - 2023.6
                         </p>
+                        <p><b>GPA:</b> 3.78 / 4.3</p>
+                        <p><b>Award:</b> Master First Class Scholarship of USTC (2020,2021)</p>
+                        <p><b>courses:</b> Deep Learning, Computer Vision, Graph Theory, Digital Signal Process</p>
+
+                        <h3><b>University of Mining and Technology(CUMT)</b></h3>
+                        <p>
+                            Bachelor of Electrical Engineering and Automation 
+                        </p>
+                        <p>
+                            2016.9 - 2020.6
+                        </p>
+                        <p><b>GPA:</b> 4.12 / 5.00</p>
+                        <p><b>Award:</b> Class Scholarship of CUMT (2019)</p>
+
+                        <h3><b>University of Wisconsin Madison</b></h3>
+                        <p>
+                            Exchanged in Electrical Engineering  
+                        </p>
+                        <p>
+                            2017.8 - 2018.6
+                        </p>
+                        <p><b>GPA:</b> 3.88 / 4.00</p>
 				</section>            
 			</article>
 
