--- a/index.html
+++ b/index.html
@@ -34,32 +34,41 @@
                     </p>
 				</section>
 				<section>
-					<h2>SKILLS</h2>
+					<h2>SKILLS & EXPECTED JOB</h2>
 					<!-- your skills -->
-                    <p>Computer Languages: C++, Python</p>
-                    <p>Technologies: Ubuntu, ROS, Pytorch, git, docker</p>
+                    <p><b>Computer Languages:</b> C++, Python</p>
+                    <p><b>Technologies:</b> Ubuntu, ROS, Pytorch, git, docker</p>
+                    <p><b>Expected Job:</b> C++ related..</p>
 				</section>
 
-				<section>
+                <section>
+					<h2>Community & Leadership</h2>
+                        <h3><b>Microsoft Learn Student Ambassadors (MLSA) - Alpha</b></h3>
+				</section>
+				          
+			</article>
+
+			<article id="mainRight">
+                <section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
-                    <h3><b>University of Science and Technology of China(USTC)</b></b></h3>
+                    <h3><b>University of Science and Technology of China (USTC)</b></b></h3>
                         <p>
                             Master of Computer technology 
                         </p>
                         <p>
-                            2020.9 - 2023.6
+                            Duration: 2020.9 - 2023.6
                         </p>
                         <p><b>GPA:</b> 3.78 / 4.3</p>
                         <p><b>Award:</b> Master First Class Scholarship of USTC (2020,2021)</p>
-                        <p><b>courses:</b> Deep Learning, Computer Vision, Graph Theory, Digital Signal Process</p>
+                        <p><b>Main courses:</b> Deep Learning, Computer Vision, Graph Theory, Digital Signal Process</p>
 
-                        <h3><b>University of Mining and Technology(CUMT)</b></h3>
+                        <h3><b>University of Mining and Technology (CUMT)</b></h3>
                         <p>
                             Bachelor of Electrical Engineering and Automation 
                         </p>
                         <p>
-                            2016.9 - 2020.6
+                            Duration: 2016.9 - 2020.6
                         </p>
                         <p><b>GPA:</b> 4.12 / 5.00</p>
                         <p><b>Award:</b> Class Scholarship of CUMT (2019)</p>
@@ -69,18 +78,11 @@
                             Exchanged in Electrical Engineering  
                         </p>
                         <p>
-                            2017.8 - 2018.6
+                            Duration: 2017.8 - 2018.6
                         </p>
                         <p><b>GPA:</b> 3.88 / 4.00</p>
-				</section>            
-			</article>
-
-			<article id="mainRight">
-				<section>
-					<h2>ABOUT</h2>
-					<!-- about you -->
-                    <p>A brief paragraph about you and what kind of job/company you are looking to work for.</p>
-				</section>
+				</section>  
+				
 
 				<section>
 					<h2>WORK EXPERIENCE</h2>
