--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
-                    <h3><b>University of Science and Technology of China (USTC)</b></b></h3>
+                    <h3><b>* University of Science and Technology of China (USTC)</b></b></h3>
                         <p>
                             Master of Computer technology 
                         </p>
@@ -63,7 +63,7 @@
                         <p><b>Award:</b> Master First Class Scholarship of USTC (2020,2021)</p>
                         <p><b>Main courses:</b> Deep Learning, Computer Vision, Graph Theory, Digital Signal Process</p>
 
-                        <h3><b>University of Mining and Technology (CUMT)</b></h3>
+                        <h3><b>* University of Mining and Technology (CUMT)</b></h3>
                         <p>
                             Bachelor of Electrical Engineering and Automation 
                         </p>
@@ -73,7 +73,7 @@
                         <p><b>GPA:</b> 4.12 / 5.00</p>
                         <p><b>Award:</b> Class Scholarship of CUMT (2019)</p>
 
-                        <h3><b>University of Wisconsin Madison</b></h3>
+                        <h3><b>* University of Wisconsin Madison</b></h3>
                         <p>
                             Exchanged in Electrical Engineering  
                         </p>
